* Windows: Fixed crash that occurred when recalling a location with
  no selection

	
1.2.2
* Improved find algorithm for starnames, and combined names from hdnames.dat
  into starnames.dat. Also added several additional names and variant spellings
  from my Star Atlas into starnames.dat (whose format has been completely
  revamped). (dramsey)
* Unix GTK: Got Ctrl-Q to exit the Program properly. (dramsey)
* Unix GTK: Capture Filenames now starts up with a proper filename, remembers
            the last directory, and complains about bad filenames. (dramsey)
* Added 'verbose' option, and supressed most non-error type messages unless
  verbose is set. (dramsey)
* Made picking exact for oblate planets
* Optimized rendering of planet meshes
* Switched to high levels of details when camera is near surface of a planet
* Improved the appearance of the corona around stars
* Fixed specular lighting for 3DS meshes, but correcting the mapping of 3DS
  shininess to OpenGL specular exponents.
* Multi Resolution Texturing. (dramsey)
* Unix: Much improved recognition of missing packages in configure. (dramsey)
* Added rendering of eclipse shadows
* Implemented longitude of axis for planet rotation elements
* Corrected inclinations of Saturn (now rings appear at proper tilt when viewed
  from Earth), Uranus, and Neptune.
* Added accurate orbital calculations for the eight largest moons of Saturn
* Textures for Ariel, Umbriel, Titania, and Umbriel from Bruckner.
* Improved planet labeling: less clutter, plus labels are displayed for distant
  objects at high zoom levels.
* Fixed rendering of ring systems so that planets with both rings and
  a cloud layer are rendered correctly.
* Added accurate orbital calculations for the five largest moons of Uranus
* Added option to render stars as points (for a less fuzzy appearance)
* Corrected sizing of planets' shadows on their ring systems
* Corrected orientation of 